2004-08-18 Mikhail Khodjaiants
	New constant - the default value for the "stop at main" property.
	* ICDTLaunchConfigurationConstants.java

2004-08-14 Alain Magloire
	Fix for 71992.
	* CType.java

2004-08-05 Mikhail Khodjaiants
	Restrict the "display as array" operation to the pointer types only.
	* CVariable.java

2004-08-05 Mikhail Khodjaiants
	Warning cleanup.
	* CSharedLibraryManager.java
	* CUpdateManager.java

2004-08-05 Mikhail Khodjaiants
	Display the error message in the array label, if the attempt to get array values fails.
	* CArrayPartition.java
	* CArrayPartitionValue.java
	* CDebugElement.java: made the exception throwing methods static.

2004-08-05 Mikhail Khodjaiants
	Fixed the "resumed" event handler of the variable types.
	* CExpression.java
	* CGlobalVariable.java
	* CStackFrame.java
	* CVariable.java
 
2004-08-05 Mikhail Khodjaiants
	Added the abstract prototypes for some generic methods.
	* AbstractCValue.java
	* AbstractCVariable.java
	* CArrayPartition.java
	* CArrayPartitionValue.java
	* CValue.java
	* CVariable.java

2004-08-04 Mikhail Khodjaiants
	New implementation of the variable types.
	* CDIDebugModel.java
	* CVariableFormat.java: new
	* ICastToArray.java
	* ICastToType.java
	* ICGlobalVariable.java
	* ICType.java
	* ICValue.java
	* ICVariable.java
	* IFormatSupport.java: new
	* CGlobalVariableManager.java
	* CoreModelMessages.properties
	* AbstractCValue.java: new
	* AbstractCVariable.java: new
	* CArrayPartition.java
	* CArrayPartitionValue.java
	* CDebugTarget.java
	* CExpression.java
	* CGlobalVariable.java
	* CRegister.java
	* CRegisterGroup.java
	* CStackFrame.java
	* CType.java
	* CValue.java
	* CValueFactory.java
	* CVariable.java
	* CVariableFactory.java: new
	* CModificationVariable: deleted

2004-07-23 Mikhail Khodjaiants
	Marked the expression creation methods as deprecated in CDebugModel.
	* CDebugModel.java

2004-07-21 Mikhail Khodjaiants
	CThread cleanup.
	* CThread.java

2004-07-21 Mikhail Khodjaiants