@@ -11,10 +11,15 @@
 package org.eclipse.cdt.debug.internal.core.breakpoints;
 
 import java.text.MessageFormat;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.Map;
-
+import java.util.Set;
 import org.eclipse.cdt.debug.core.CDIDebugModel;
 import org.eclipse.cdt.debug.core.model.ICBreakpoint;
+import org.eclipse.cdt.debug.core.model.ICDebugTarget;
+import org.eclipse.cdt.debug.core.model.ICThread;
 import org.eclipse.core.resources.IMarker;
 import org.eclipse.core.resources.IResource;
 import org.eclipse.core.resources.IWorkspaceRunnable;
@@ -26,22 +31,27 @@ import org.eclipse.debug.core.DebugException;
 import org.eclipse.debug.core.DebugPlugin;
 import org.eclipse.debug.core.IDebugEventSetListener;
 import org.eclipse.debug.core.model.Breakpoint;
+import org.eclipse.debug.core.model.IDebugTarget;
 
 /**
  * The base class for all C/C++ specific breakpoints.
  */
 public abstract class CBreakpoint extends Breakpoint implements ICBreakpoint, IDebugEventSetListener {
 
+	private Map fFilteredThreadsByTarget;
+
 	/**
 	 * Constructor for CBreakpoint.
 	 */
 	public CBreakpoint() {
+		fFilteredThreadsByTarget = new HashMap( 10 );
 	}
 
 	/**
 	 * Constructor for CBreakpoint.
 	 */
 	public CBreakpoint( final IResource resource, final String markerType, final Map attributes, final boolean add ) throws CoreException {
+		this();
 		IWorkspaceRunnable wr = new IWorkspaceRunnable() {
 
 			public void run( IProgressMonitor monitor ) throws CoreException {
@@ -270,5 +280,77 @@ public abstract class CBreakpoint extends Breakpoint implements ICBreakpoint, ID
 			sb.append( MessageFormat.format( BreakpointMessages.getString( "CBreakpoint.2" ), new String[] { condition } ) ); //$NON-NLS-1$
 		}
 		return sb.toString();
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.core.model.ICBreakpoint#getTargetFilters()
+	 */
+	public ICDebugTarget[] getTargetFilters() throws CoreException {
+		Set set = fFilteredThreadsByTarget.keySet();
+		return (ICDebugTarget[])set.toArray( new ICDebugTarget[set.size()] );
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.core.model.ICBreakpoint#getThreadFilters(org.eclipse.cdt.debug.core.model.ICDebugTarget)
+	 */
+	public ICThread[] getThreadFilters( ICDebugTarget target ) throws CoreException {
+		Set set = (Set)fFilteredThreadsByTarget.get( target );
+		return ( set != null ) ? (ICThread[])set.toArray( new ICThread[set.size()] ) : null;
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.core.model.ICBreakpoint#removeTargetFilter(org.eclipse.cdt.debug.core.model.ICDebugTarget)
+	 */
+	public void removeTargetFilter( ICDebugTarget target ) throws CoreException {
+		if ( fFilteredThreadsByTarget.containsKey( target ) ) {
+			fFilteredThreadsByTarget.remove( target );
+			fireChanged();
+		}
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.core.model.ICBreakpoint#removeThreadFilters(org.eclipse.cdt.debug.core.model.ICThread[])
+	 */
+	public void removeThreadFilters( ICThread[] threads ) throws CoreException {
+		if ( threads != null && threads.length > 0 ) {
+			IDebugTarget target = threads[0].getDebugTarget();
+			if ( fFilteredThreadsByTarget.containsKey( target ) ) {
+				Set set = (Set)fFilteredThreadsByTarget.get( target );
+				if ( set != null ) {
+					set.removeAll( Arrays.asList( threads ) );
+					if ( set.isEmpty() ) {
+						fFilteredThreadsByTarget.remove( target );
+					}
+				}
+			}
+		}
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.core.model.ICBreakpoint#setTargetFilter(org.eclipse.cdt.debug.core.model.ICDebugTarget)
+	 */
+	public void setTargetFilter( ICDebugTarget target ) throws CoreException {
+		fFilteredThreadsByTarget.put( target, null );
+		fireChanged();
+	}
+
+	/* (non-Javadoc)
+	 * @see org.eclipse.cdt.debug.core.model.ICBreakpoint#setThreadFilters(org.eclipse.cdt.debug.core.model.ICThread[])
+	 */
+	public void setThreadFilters( ICThread[] threads ) throws CoreException {
+		if ( threads != null && threads.length > 0 ) {
+			fFilteredThreadsByTarget.put( threads[0].getDebugTarget(), new HashSet( Arrays.asList( threads ) ) );
+		}
+	}
+
+	/**
+	 * Change notification when there are no marker changes. If the marker
+	 * does not exist, do not fire a change notificaiton (the marker may not
+	 * exist if the associated project was closed).
+	 */
+	protected void fireChanged() {
+		if ( markerExists() ) {
+			DebugPlugin.getDefault().getBreakpointManager().fireBreakpointChanged( this );
+		}
 	}
 }
