@@ -1,3 +1,9 @@
+2004-09-01 Mikhail Khodjaiants
+	Breakpoint filtering by targets (ui).
+	* PropertyPageMessages.properties
+	* CBreakpointFilteringPage.java
+	* ThreadFilterEditor.java
+
 2004-08-25 Mikhail Khodjaiants
 	Added the "Filtering" page to the breakpoint properties.
 	* CBreakpointWorkbenchAdapterFactory.java: new
